--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index",
     "test": "jest --verbose --coverage",
+    "test-watch": "jest --verbose --coverage --watch",
     "lint": "eslint **/*.js --fix",
     "start:db": "mkdir -p ./db && mongod --dbpath ./db",
     "watch": "nodemon index.js"
