--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "supertest": "^4.0.2"
+  },
+  "devDependencies": {
+    "express-swagger-generator": "^1.1.15"
   }
 }
