--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "mongodb-memory-server": "^6.0.1",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
-    "supertest": "^4.0.2"
-  },
-  "devDependencies": {
+    "supertest": "^4.0.2",
     "express-swagger-generator": "^1.1.15"
-  }
+  },
+  "devDependencies": {}
 }
